@@ -564,7 +564,7 @@ murrine_draw_progressbar_fill (cairo_t *cr,
 
 			murrine_shade (fill, widget->lightborder_shade*widget->highlight_shade, &highlight);
 
-			for (i=step; i<width-4; i+=step)
+			for (i=step; i<width-3; i+=step)
 			{
 				cairo_move_to (cr, i-0.5, 1);
 				cairo_line_to (cr, i-0.5, height-1);
