@@ -513,13 +513,14 @@ murrine_rgba_draw_progressbar_fill (cairo_t *cr,
 			break;
 		}
 		case 2:
+		{
 			MurrineRGB highlight;
 			int step = 18;
 			int i;
 
 			murrine_shade (fill, widget->lightborder_shade*widget->highlight_shade, &highlight);
 
-			for (i=step; i<width-4; i+=step)
+			for (i=step; i<width-3; i+=step)
 			{
 				cairo_move_to (cr, i-0.5, 1);
 				cairo_line_to (cr, i-0.5, height-1);
