@@ -1,5 +1,11 @@
 2009-01-02  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
+	* src/murrine_draw.c (murrine_draw_progressbar_fill):
+	* src/murrine_draw_rgba.c (murrine_rgba_draw_progressbar_fill):
+	Fixed previous commit.
+
+2009-01-02  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
 	* schema/murrine.xml.in.in:
 	* src/murrine_draw.c (murrine_draw_progressbar_fill):
 	* src/murrine_draw_rgba.c (murrine_rgba_draw_progressbar_fill):
